not a working commit

--- a/.github/actions/build-push-container/action.yaml
+++ b/.github/actions/build-push-container/action.yaml
@@ -47,7 +47,7 @@ inputs:
   app_bc_geo_address_apiurl:
     description: BC Geo Address API URL
     required: true
-    default: "https://geocodertst.api.gov.bc.ca/addresses.json"
+    default: "https://geocoder.api.gov.bc.ca/addresses.json"
   app_chefs_geo_address_apiurl:
     description: Proxy URL to BC Geo Address API URL
     required: true
