--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -27,6 +27,7 @@
     "@mdi/font": "^6.9.96",
     "axios": "^0.27.2",
     "bootstrap-scss": "^4.6.1",
+    "chart.js": "3.0.0",
     "core-js": "^3.23.3",
     "deep-freeze": "^0.0.1",
     "fast-json-patch": "^3.1.1",
@@ -39,7 +40,9 @@
     "qrcode.vue": ">= 1.7.0 < 3.0.0",
     "uuid": "^8.3.2",
     "vue": "^2.7.2",
+    "vue-chartjs": "4.1.2",
     "vue-clipboard2": "^0.3.3",
+    "vue-d3-charts": "^0.2.8",
     "vue-formio": "^4.0.7",
     "vue-json-pretty": "^1.8.3",
     "vue-router": "^3.5.3",
